Add Solo Leveling book series content and layout enhancements
- Added images for Solo Leveling books 1 to 4.
- Created markdown files for Solo Leveling books 1 to 4 with metadata and descriptions.
- Implemented a configuration file for book collections using Zod schema.
- Updated layout to include global styles and improved structure.
- Enhanced the index page to display a list of Solo Leveling books with descriptions and reading times.
- Added global CSS file for Tailwind CSS integration.

--- a/dev-books/src/pages/index.astro
+++ b/dev-books/src/pages/index.astro
@@ -1,11 +1,45 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import { getCollection } from 'astro:content';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+// Obtener los libros y ordenarlos por el campo 'order'
+const books = await getCollection('books')
+  .then(books => books.sort((a, b) => a.data.order - b.data.order));
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="Libros de Solo Leveling">
+	<main>
+		<h1 class="text-center text-7xl font-extrabold mb-24 text-amber-100">Solo Leveling 🗡️ <span class="block">Books</span></h1>
+		<section aria-label="Libros de anime recomendados">
+			<div class="px-4 mx-auto max-w-screen-xl">
+				<div class="grid gap-6 md:grid-cols-2">
+					{books.map((book) => {
+						const { slug, data} = book;
+						const { title, author, img, readtime, description , buy } = data;
+						return (
+							<article class="
+							flex border border-1 border-amber-100 rounded-lg p-4 shadow-lg transition hover:scale-105 hover:shadow-xl
+							bg-gradient-to-r from-gray-900 via-gray-800 to-amber-900 hover:from-gray-800 hover:via-gray-700 hover:to-amber-800 transition-all duration-300
+							">
+								<a href={`/libro/${slug}`} class="mb-2 xl:mb-0">
+									<img src={`${img}`} alt={title} class="mr-5 w-48 rounded"/>
+								</a>
+								<div class="flex flex-col justify-center">
+									<h2 class="mb-2 text-2xl font-bold leading-tight text-amber-100">
+										{title}
+									</h2>
+									<p class="mb-4 text-gray-300 max-w-sm">
+										{description}
+									</p>
+									<p class="text-xs text-gray-400">
+										⏳Lectura en {readtime} minutos
+									</p>
+								</div>
+							</article>
+						)
+					})}
+				</div>
+			</div>
+		</section>
+	</main>
 </Layout>
