--- a/dev-books/src/layouts/Layout.astro
+++ b/dev-books/src/layouts/Layout.astro
@@ -1,3 +1,6 @@
+---
+import '../styles/global.css';
+---
 <!doctype html>
 <html lang="en">
 	<head>
@@ -7,16 +10,15 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
 	</head>
-	<body>
-		<slot />
+	<body class="grid place-content-center p-20 bg-gradient-to-br from-gray-950 via-gray-900 to-slate-900 text-gray-100">
+		<div class="container">
+			<slot />
+		</div>
 	</body>
 </html>
 
 <style>
-	html,
+	html{}
 	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
 	}
 </style>
