--- a/dev-books/src/layouts/Layout.astro
+++ b/dev-books/src/layouts/Layout.astro
@@ -1,5 +1,11 @@
 ---
+import { ClientRouter } from 'astro:transitions';
 import '../styles/global.css';
+
+interface Props {
+	title: string;
+}
+const { title } = Astro.props;
 ---
 <!doctype html>
 <html lang="en">
@@ -7,8 +13,8 @@ import '../styles/global.css';
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{title}</title>
+		<ClientRouter /> <!-- Habilita un efecto de fadein y fedaout al entrar en una pag y al salir de una pag -->
 	</head>
 	<body class="grid place-content-center p-20 bg-gradient-to-br from-gray-950 via-gray-900 to-slate-900 text-gray-100">
 		<div class="container">
