--- a/dev-books/src/pages/index.astro
+++ b/dev-books/src/pages/index.astro
@@ -18,11 +18,11 @@ const books = await getCollection('books')
 						const { title, author, img, readtime, description , buy } = data;
 						return (
 							<article class="
-							flex border border-1 border-amber-100 rounded-lg p-4 shadow-lg transition hover:scale-105 hover:shadow-xl
+							flex border border-amber-100 rounded-lg p-4 shadow-lg hover:scale-105 hover:shadow-xl
 							bg-gradient-to-r from-gray-900 via-gray-800 to-amber-900 hover:from-gray-800 hover:via-gray-700 hover:to-amber-800 transition-all duration-300
 							">
 								<a href={`/libro/${slug}`} class="mb-2 xl:mb-0">
-									<img src={`${img}`} alt={title} class="mr-5 w-48 rounded"/>
+									<img transition:name={`img-${slug}`} src={`${img}`} alt={title} class="mr-5 w-48 rounded"/>
 								</a>
 								<div class="flex flex-col justify-center">
 									<h2 class="mb-2 text-2xl font-bold leading-tight text-amber-100">
