--- a/dev-books/src/pages/libro/[id].astro
+++ b/dev-books/src/pages/libro/[id].astro
@@ -1,22 +1,29 @@
 ---
-import { getCollection, render } from 'astro:content';
-import Layout from '../../layouts/Layout.astro';
+import { getCollection, render } from "astro:content";
+import { SHOW_BUY_BUTTON } from "astro:env/server";
+import Layout from "../../layouts/Layout.astro";
+import AmazonLogo from "../../components/AmazonLogo.astro";
+import BookScore from "../../components/BookScore.astro";
+import BuyButton from "../../components/BuyButton.astro";
 
 // Obtener el libro por su ID
 export async function getStaticPaths() {
-    const books = await getCollection('books');
-    return books.map(book => ({
-        params: { id: book.slug },
-        props: { book }
-    }));
+  const books = await getCollection("books");
+
+  return books.map((book) => ({
+    params: { id: book.slug },
+    props: { book }
+  }))
 }
+
 const { book } = Astro.props;
 const { data, slug } = book;
 const { title, author, img, readtime, description, buy } = data;
+
 // Sirve para renderizar el contenido del libro del Markdown
 const { Content } = await render(book);
-export const prerender = true
 
+export const prerender = true; // Desactivar prerenderizado para este libro
 ---
 
 <Layout title=`${title} - Solo leveling Books`>
@@ -24,7 +31,16 @@ export const prerender = true
         <aside class="flex flex-col items-center gap-4">
             <a href='/' class="hover:underline opacity-70 mb-4">← Volver atrás</a>
             <img transition:name={`img-${slug}`} class="rounded w-72 h-auto" src={`/${img}`} alt={title} />
-            <!-- enlace para comprar -->
+
+            <BookScore server:defer id={slug}>
+                <span slot="fallback" class="text-xs opacity-70">Cargando puntuación...</span>
+            </BookScore>
+
+            {
+                SHOW_BUY_BUTTON && (
+                    <BuyButton buy={buy} server:defer />
+                )
+            }
         </aside>
         <main class="max-w-3xl">
             <h1 class="text-4xl font-bold mb-4">{title}</h1>
